src/pages/RandoPage/RandoPage.scss
.EditorPage {
  display: flex;
  flex: 1;
  flex-direction: column;
  overflow: hidden;
  width: 100%;

  $hPadding: 16px;

  // .header, // TODO: Probably will be used in the future
  .layout {
    margin-left: $hPadding;
    margin-right: $hPadding;
  }
  .layout {
    flex: 1;
    overflow: hidden;
    display: flex;
    align-items: stretch;
    max-height: 100%;
    // XXX: NOTE: Temporarily spacings for demo: later inner spacing should be used
    gap: $hPadding;
    & > * {
      overflow: hidden;
      // padding: 0 20px;
      /* // TODO?
       * &.scrollable {
       *   oveflow: auto;
       * }
       */
    }
  }
  .column {
    display: flex;
    /* &.scrollable {
     *   overflow: auto;
     * }
     */
  }
  .sideColumn {
    min-width: 200px;
    max-width: 350px;
    width: 20%;
  }
  .mainColumn {
    flex: 1;
    // flex-direction: column; // DEMO?
  }
}

